[gd_scene load_steps=6 format=2]

[ext_resource path="res://reusabe_menus/settings/restore_white_18dp.png" type="Texture" id=1]
[ext_resource path="res://reusabe_menus/settings/save_white_18dp.png" type="Texture" id=2]
[ext_resource path="res://reusabe_menus/settings/Settings.gd" type="Script" id=3]
[ext_resource path="res://reusabe_menus/settings/OptionsPanel.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.627451 )

[node name="Settings" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="Tabs" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnSave" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 10.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 90.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnRestore" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 10.0
margin_right = 50.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )

[node name="OptionsPanel" parent="." instance=ExtResource( 4 )]
margin_top = 50.0
[connection signal="tab_changed" from="Tabs" to="." method="_on_tab_changed"]
[connection signal="pressed" from="BtnSave" to="." method="_on_save_pressed"]
[connection signal="pressed" from="BtnRestore" to="." method="_on_restore_pressed"]
[connection signal="option_changed" from="OptionsPanel" to="." method="on_option_changed"]
